fix: scroll overflow on testimonials

--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -45,7 +45,7 @@
 	padding: 2rem;
 	gap: 4rem;
 	font-family: Rubik;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .testimonial-img {
